--- a/index.html
+++ b/index.html
@@ -3,103 +3,294 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cogitron Kids 🚀</title>
+    <title>Cogitron Pro 🚀</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Rajdhani:wght@600&display=swap" rel="stylesheet">
     <style>
-        :root { --primary: #FF6B6B; --secondary: #4ECDC4; --bg: #F7FFF7; }
-        body { font-family: 'Quicksand', sans-serif; background-color: var(--bg); display: flex; flex-direction: column; align-items: center; padding: 20px; }
-        .kids-card { background: white; padding: 30px; border-radius: 30px; box-shadow: 0 10px 20px rgba(0,0,0,0.05); max-width: 400px; width: 100%; text-align: center; border: 4px solid var(--secondary); }
-        input, select { width: 85%; padding: 12px; margin: 10px 0; border-radius: 15px; border: 2px solid #eee; font-size: 16px; }
-        button { background-color: var(--primary); color: white; border: none; padding: 12px 25px; border-radius: 50px; font-weight: bold; cursor: pointer; margin: 5px; }
-        #chat-section { display: none; width: 100%; max-width: 600px; }
-        #chat-box { height: 300px; overflow-y: auto; border: 1px solid #eee; padding: 15px; margin-bottom: 10px; text-align: left; }
-        .bot-msg { background: #e8f4fd; padding: 10px; border-radius: 10px; margin: 5px 0; }
-        .user-msg { background: #fff9c4; padding: 10px; border-radius: 10px; margin: 5px 0; text-align: right; }
+        :root {
+            --neon-blue: #00d4ff;
+            --neon-pink: #ff007f;
+            --bg-dark: #0a0b10;
+            --sidebar-bg: #11131f;
+            --chat-bg: #161925;
+            --text-main: #e0e0e0;
+        }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: var(--bg-dark);
+            color: var(--text-main);
+            margin: 0;
+            display: flex;
+            height: 100vh;
+            overflow: hidden;
+        }
+
+        /* --- SIDEBAR --- */
+        .sidebar {
+            width: 260px;
+            background-color: var(--sidebar-bg);
+            border-right: 1px solid #2d2d2d;
+            display: flex;
+            flex-direction: column;
+            padding: 15px;
+        }
+
+        .new-chat-btn {
+            border: 1px solid var(--neon-blue);
+            background: transparent;
+            color: var(--neon-blue);
+            padding: 10px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: 600;
+            margin-bottom: 20px;
+            transition: 0.3s;
+        }
+
+        .new-chat-btn:hover { background: rgba(0, 212, 255, 0.1); }
+
+        .history-list {
+            flex-grow: 1;
+            overflow-y: auto;
+            margin-top: 10px;
+        }
+
+        .history-item {
+            padding: 12px;
+            margin-bottom: 8px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 0.85rem;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            color: #aaa;
+            background: rgba(255,255,255,0.03);
+            border-left: 2px solid transparent;
+        }
+
+        .history-item:hover { 
+            background: rgba(0, 212, 255, 0.05); 
+            color: white;
+            border-left: 2px solid var(--neon-blue);
+        }
+
+        /* --- MAIN CHAT AREA --- */
+        .main-container {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            background-color: var(--chat-bg);
+            position: relative;
+        }
+
+        #chat-window {
+            flex-grow: 1;
+            overflow-y: auto;
+            padding: 40px 15% 120px 15%;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .message {
+            max-width: 80%;
+            line-height: 1.6;
+            padding: 15px 20px;
+            border-radius: 15px;
+            animation: fadeIn 0.3s ease;
+        }
+
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+
+        .user-msg {
+            align-self: flex-end;
+            background: #2b2d3e;
+            border-left: 4px solid var(--neon-pink);
+        }
+
+        .bot-msg {
+            align-self: flex-start;
+            background: #1e2235;
+            border-left: 4px solid var(--neon-blue);
+        }
+
+        /* --- INPUT AREA --- */
+        .input-area {
+            padding: 20px 15%;
+            background: linear-gradient(transparent, var(--chat-bg) 50%);
+            position: absolute;
+            bottom: 0;
+            width: 70%;
+        }
+
+        .input-wrapper {
+            position: relative;
+            display: flex;
+            align-items: center;
+        }
+
+        #user-input {
+            width: 100%;
+            background: #252839;
+            border: 1px solid #3d405b;
+            padding: 16px 60px 16px 20px;
+            border-radius: 15px;
+            color: white;
+            font-size: 1rem;
+            outline: none;
+        }
+
+        .send-btn {
+            position: absolute;
+            right: 10px;
+            background: var(--neon-blue);
+            border: none;
+            width: 40px;
+            height: 40px;
+            border-radius: 10px;
+            cursor: pointer;
+            font-size: 1.2rem;
+        }
+
+        /* --- AUTH --- */
+        #auth-overlay {
+            position: fixed;
+            inset: 0;
+            background: var(--bg-dark);
+            z-index: 100;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .auth-card {
+            background: #161925;
+            padding: 40px;
+            border-radius: 20px;
+            border: 1px solid var(--neon-blue);
+            text-align: center;
+            width: 320px;
+        }
     </style>
 </head>
 <body>
 
-    <div id="auth-section" class="kids-card">
-        <h1>Cogitron 🤖</h1>
-        <input type="email" id="email" placeholder="Email des parents">
-        <input type="password" id="password" placeholder="Mot de passe secret">
-        <select id="user-age">
-            <option value="6">6 ans</option>
-            <option value="8" selected>8 ans</option>
-            <option value="10">10 ans</option>
-            <option value="12">12 ans</option>
-        </select>
-        <button onclick="handleAuth('signUp')">Créer mon compte</button>
-        <button onclick="handleAuth('signIn')" style="background:var(--secondary)">Me connecter</button>
+    <div id="auth-overlay">
+        <div class="auth-card">
+            <h1 style="font-family:'Rajdhani'; color:var(--neon-blue); margin-top:0;">COGITRON</h1>
+            <input type="email" id="email" placeholder="Email" style="width:90%; padding:10px; margin:10px 0; border-radius:5px; border:none; background:#252839; color:white;">
+            <input type="password" id="password" placeholder="Mot de passe" style="width:90%; padding:10px; margin:10px 0; border-radius:5px; border:none; background:#252839; color:white;">
+            <select id="user-age" style="width:97%; padding:10px; margin:10px 0; border-radius:5px;">
+                <option value="6">6 ans</option>
+                <option value="8" selected>8 ans</option>
+                <option value="10">10 ans</option>
+                <option value="12">12 ans</option>
+            </select>
+            <button onclick="handleAuth('signUp')" style="width:100%; padding:12px; background:var(--neon-pink); color:white; border:none; border-radius:8px; margin-top:10px; cursor:pointer; font-weight:bold;">S'INSCRIRE</button>
+            <button onclick="handleAuth('signIn')" style="width:100%; padding:12px; background:var(--neon-blue); color:white; border:none; border-radius:8px; margin-top:10px; cursor:pointer; font-weight:bold;">SE CONNECTER</button>
+        </div>
     </div>
 
-    <div id="chat-section" class="kids-card">
-        <div id="chat-box"></div>
-        <input type="text" id="user-input" placeholder="Dis-moi tout...">
-        <button onclick="askAI()">Envoyer 🚀</button>
-        <button onclick="location.reload()" style="background:#ccc">Quitter</button>
+    <div class="sidebar">
+        <h2 style="font-family:'Rajdhani'; color:var(--neon-pink); margin-top:0;">COGITRON</h2>
+        <button class="new-chat-btn" onclick="location.reload()">+ Nouveau Chat</button>
+        <div class="history-list" id="history">
+            </div>
+        <div style="font-size:0.75rem; color:#555; padding-top:10px; border-top:1px solid #222;">
+            Utilisateur: <span id="user-display" style="color:#888">Non connecté</span>
+        </div>
+    </div>
+
+    <div class="main-container">
+        <div id="chat-window">
+            <div class="message bot-msg">Salut ! Je suis Cogitron. Pose-moi une question, je suis prêt ! 🤖</div>
+        </div>
+
+        <div class="input-area">
+            <div class="input-wrapper">
+                <input type="text" id="user-input" placeholder="Écris ici..." onkeypress="if(event.key==='Enter') askAI()">
+                <button class="send-btn" onclick="askAI()">🚀</button>
+            </div>
+        </div>
     </div>
 
     <script>
+        // TES CLÉS CONFIGURÉES
         const SB_URL = "https://mrzevhvpoltsobxtkpxe.supabase.co";
         const SB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1yemV2aHZwb2x0c29ieHRrcHhlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA5MTY2MDksImV4cCI6MjA4NjQ5MjYwOX0.4NOt_j0aP02Nh-E_7mJy32hE8Q0ag0gA32PXgxNpSvU";
-        const GROQ_KEY = "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"; 
-
+        const GROQ_KEY = "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";
+        
         const clientSB = supabase.createClient(SB_URL, SB_KEY);
         let currentAge = 8;
+        let firstMessage = true;
 
         async function handleAuth(type) {
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
             currentAge = document.getElementById('user-age').value;
 
-            let response;
-            if (type === 'signUp') {
-                response = await clientSB.auth.signUp({
-                    email, password, options: { data: { age: currentAge } }
-                });
-            } else {
-                response = await clientSB.auth.signInWithPassword({ email, password });
-            }
+            if(!email || !password) return alert("Remplis tout !");
 
-            if (response.error) {
-                alert("Erreur : " + response.error.message);
-            } else {
-                if (type === 'signUp') alert("Compte créé ! Connecte-toi maintenant.");
-                else showChat();
-            }
-        }
+            const { data, error } = (type === 'signUp') 
+                ? await clientSB.auth.signUp({ email, password, options: { data: { age: currentAge } } })
+                : await clientSB.auth.signInWithPassword({ email, password });
 
-        function showChat() {
-            document.getElementById('auth-section').style.display = 'none';
-            document.getElementById('chat-section').style.display = 'block';
+            if (error) alert("Erreur: " + error.message);
+            else {
+                document.getElementById('auth-overlay').style.display = 'none';
+                document.getElementById('user-display').innerText = email;
+            }
         }
 
         async function askAI() {
-            const input = document.getElementById('user-input').value;
-            if (!input) return;
-            
-            const chatBox = document.getElementById('chat-box');
-            chatBox.innerHTML += `<div class="user-msg"><b>Toi:</b> ${input}</div>`;
-            document.getElementById('user-input').value = "";
+            const inputField = document.getElementById('user-input');
+            const text = inputField.value.trim();
+            if (!text) return;
 
-            const res = await fetch("https://api.groq.com/openai/v1/chat/completions", {
-                method: "POST",
-                headers: { "Authorization": `Bearer ${GROQ_KEY}`, "Content-Type": "application/json" },
-                body: JSON.stringify({
-                    "model": "llama-3.3-70b-versatile",
-                    "messages": [
-                        { "role": "system", "content": `Tu es Cogitron, un robot pour un enfant de ${currentAge} ans. Sois gentil et simple.` },
-                        { "role": "user", "content": input }
-                    ]
-                })
-            });
+            if(firstMessage) {
+                addToHistory(text);
+                firstMessage = false;
+            }
 
-            const data = await res.json();
-            const reply = data.choices[0].message.content;
-            chatBox.innerHTML += `<div class="bot-msg"><b>Cogitron:</b> ${reply}</div>`;
-            chatBox.scrollTop = chatBox.scrollHeight;
+            addMsg(text, 'user-msg');
+            inputField.value = '';
+
+            try {
+                const res = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+                    method: "POST",
+                    headers: { "Authorization": `Bearer ${GROQ_KEY}`, "Content-Type": "application/json" },
+                    body: JSON.stringify({
+                        "model": "llama-3.3-70b-versatile",
+                        "messages": [
+                            { "role": "system", "content": `Tu es Cogitron, robot pour enfant de ${currentAge} ans. Réponds de façon lisible et amicale.` },
+                            { "role": "user", "content": text }
+                        ]
+                    })
+                });
+                const data = await res.json();
+                addMsg(data.choices[0].message.content, 'bot-msg');
+            } catch(e) {
+                addMsg("Oups, j'ai eu un petit bug... Vérifie ta connexion !", 'bot-msg');
+            }
+        }
+
+        function addMsg(text, type) {
+            const win = document.getElementById('chat-window');
+            const div = document.createElement('div');
+            div.className = `message ${type}`;
+            div.innerText = text;
+            win.appendChild(div);
+            win.scrollTop = win.scrollHeight;
+        }
+
+        function addToHistory(title) {
+            const history = document.getElementById('history');
+            const item = document.createElement('div');
+            item.className = 'history-item';
+            item.innerText = "💬 " + title;
+            history.prepend(item);
         }
     </script>
 </body>
