--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cogitron Pro 🚀</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Rajdhani:wght@600&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Rajdhani:wght@600&display=swap" rel="stylesheet">
     <style>
         :root {
             --neon-blue: #00d4ff;
@@ -23,7 +24,6 @@
             margin: 0;
             display: flex;
             height: 100vh;
-            overflow: hidden;
         }
 
         /* --- SIDEBAR --- */
@@ -34,49 +34,35 @@
             display: flex;
             flex-direction: column;
             padding: 15px;
+            z-index: 10;
         }
 
         .new-chat-btn {
             border: 1px solid var(--neon-blue);
             background: transparent;
             color: var(--neon-blue);
-            padding: 10px;
-            border-radius: 8px;
+            padding: 12px;
+            border-radius: 10px;
             cursor: pointer;
             font-weight: 600;
             margin-bottom: 20px;
             transition: 0.3s;
         }
 
-        .new-chat-btn:hover { background: rgba(0, 212, 255, 0.1); }
-
-        .history-list {
-            flex-grow: 1;
-            overflow-y: auto;
-            margin-top: 10px;
-        }
-
         .history-item {
-            padding: 12px;
-            margin-bottom: 8px;
+            padding: 10px;
+            margin-bottom: 5px;
             border-radius: 8px;
             cursor: pointer;
             font-size: 0.85rem;
+            color: #888;
+            background: rgba(255,255,255,0.02);
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            color: #aaa;
-            background: rgba(255,255,255,0.03);
-            border-left: 2px solid transparent;
         }
 
-        .history-item:hover { 
-            background: rgba(0, 212, 255, 0.05); 
-            color: white;
-            border-left: 2px solid var(--neon-blue);
-        }
-
-        /* --- MAIN CHAT AREA --- */
+        /* --- ZONE DE CHAT (AMÉLIORÉE) --- */
         .main-container {
             flex-grow: 1;
             display: flex;
@@ -88,70 +74,76 @@
         #chat-window {
             flex-grow: 1;
             overflow-y: auto;
-            padding: 40px 15% 120px 15%;
+            padding: 20px 20%; /* Plus de marge sur les côtés pour centrer */
             display: flex;
             flex-direction: column;
             gap: 20px;
+            scroll-behavior: smooth;
         }
 
         .message {
-            max-width: 80%;
-            line-height: 1.6;
-            padding: 15px 20px;
-            border-radius: 15px;
-            animation: fadeIn 0.3s ease;
+            max-width: 75%; /* Ne prend pas toute la ligne */
+            line-height: 1.6; /* Espace entre les lignes */
+            padding: 12px 18px;
+            border-radius: 18px;
+            font-size: 1rem;
+            word-wrap: break-word;
+            animation: fadeIn 0.2s ease-out;
         }
 
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        /* Style spécifique pour le texte à l'intérieur (Markdown) */
+        .message p { margin: 8px 0; }
+        .message ul, .message ol { padding-left: 20px; }
 
         .user-msg {
             align-self: flex-end;
             background: #2b2d3e;
-            border-left: 4px solid var(--neon-pink);
+            color: #fff;
+            border-bottom-right-radius: 4px;
+            border-right: 3px solid var(--neon-pink);
         }
 
         .bot-msg {
             align-self: flex-start;
             background: #1e2235;
-            border-left: 4px solid var(--neon-blue);
+            color: #e0e0e0;
+            border-bottom-left-radius: 4px;
+            border-left: 3px solid var(--neon-blue);
         }
 
-        /* --- INPUT AREA --- */
+        /* --- INPUT --- */
         .input-area {
-            padding: 20px 15%;
-            background: linear-gradient(transparent, var(--chat-bg) 50%);
-            position: absolute;
-            bottom: 0;
-            width: 70%;
+            padding: 30px 20%;
+            background: linear-gradient(transparent, var(--chat-bg) 40%);
         }
 
         .input-wrapper {
-            position: relative;
             display: flex;
+            background: #252839;
+            border: 1px solid #3d405b;
+            border-radius: 15px;
+            padding: 5px 10px;
             align-items: center;
         }
 
         #user-input {
-            width: 100%;
-            background: #252839;
-            border: 1px solid #3d405b;
-            padding: 16px 60px 16px 20px;
-            border-radius: 15px;
+            flex-grow: 1;
+            background: transparent;
+            border: none;
+            padding: 12px;
             color: white;
             font-size: 1rem;
             outline: none;
         }
 
         .send-btn {
-            position: absolute;
-            right: 10px;
             background: var(--neon-blue);
             border: none;
-            width: 40px;
-            height: 40px;
+            width: 35px;
+            height: 35px;
             border-radius: 10px;
             cursor: pointer;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
         }
 
         /* --- AUTH --- */
@@ -171,8 +163,10 @@
             border-radius: 20px;
             border: 1px solid var(--neon-blue);
             text-align: center;
-            width: 320px;
+            width: 300px;
         }
+
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(5px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body>
@@ -182,66 +176,49 @@
             <h1 style="font-family:'Rajdhani'; color:var(--neon-blue); margin-top:0;">COGITRON</h1>
             <input type="email" id="email" placeholder="Email" style="width:90%; padding:10px; margin:10px 0; border-radius:5px; border:none; background:#252839; color:white;">
             <input type="password" id="password" placeholder="Mot de passe" style="width:90%; padding:10px; margin:10px 0; border-radius:5px; border:none; background:#252839; color:white;">
-            <select id="user-age" style="width:97%; padding:10px; margin:10px 0; border-radius:5px;">
-                <option value="6">6 ans</option>
-                <option value="8" selected>8 ans</option>
-                <option value="10">10 ans</option>
-                <option value="12">12 ans</option>
-            </select>
-            <button onclick="handleAuth('signUp')" style="width:100%; padding:12px; background:var(--neon-pink); color:white; border:none; border-radius:8px; margin-top:10px; cursor:pointer; font-weight:bold;">S'INSCRIRE</button>
-            <button onclick="handleAuth('signIn')" style="width:100%; padding:12px; background:var(--neon-blue); color:white; border:none; border-radius:8px; margin-top:10px; cursor:pointer; font-weight:bold;">SE CONNECTER</button>
+            <button onclick="handleAuth('signIn')" style="width:100%; padding:12px; background:var(--neon-blue); color:white; border:none; border-radius:8px; margin-top:10px; cursor:pointer; font-weight:bold;">ENTRER</button>
+            <p onclick="handleAuth('signUp')" style="font-size:0.7rem; color:#666; cursor:pointer; margin-top:15px;">Pas de compte ? S'inscrire</p>
         </div>
     </div>
 
     <div class="sidebar">
-        <h2 style="font-family:'Rajdhani'; color:var(--neon-pink); margin-top:0;">COGITRON</h2>
+        <h2 style="font-family:'Rajdhani'; color:var(--neon-pink); margin:0 0 20px 0;">COGITRON</h2>
         <button class="new-chat-btn" onclick="location.reload()">+ Nouveau Chat</button>
-        <div class="history-list" id="history">
-            </div>
-        <div style="font-size:0.75rem; color:#555; padding-top:10px; border-top:1px solid #222;">
-            Utilisateur: <span id="user-display" style="color:#888">Non connecté</span>
-        </div>
+        <div class="history-list" id="history"></div>
     </div>
 
     <div class="main-container">
         <div id="chat-window">
-            <div class="message bot-msg">Salut ! Je suis Cogitron. Pose-moi une question, je suis prêt ! 🤖</div>
+            <div class="message bot-msg">Salut Louis ! Je suis Cogitron. On discute ? 🤖</div>
         </div>
 
         <div class="input-area">
             <div class="input-wrapper">
-                <input type="text" id="user-input" placeholder="Écris ici..." onkeypress="if(event.key==='Enter') askAI()">
+                <input type="text" id="user-input" placeholder="Pose ta question..." onkeypress="if(event.key==='Enter') askAI()">
                 <button class="send-btn" onclick="askAI()">🚀</button>
             </div>
         </div>
     </div>
 
     <script>
-        // TES CLÉS CONFIGURÉES
         const SB_URL = "https://mrzevhvpoltsobxtkpxe.supabase.co";
         const SB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1yemV2aHZwb2x0c29ieHRrcHhlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA5MTY2MDksImV4cCI6MjA4NjQ5MjYwOX0.4NOt_j0aP02Nh-E_7mJy32hE8Q0ag0gA32PXgxNpSvU";
         const GROQ_KEY = "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";
         
         const clientSB = supabase.createClient(SB_URL, SB_KEY);
-        let currentAge = 8;
-        let firstMessage = true;
+        let firstMsg = true;
 
         async function handleAuth(type) {
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
-            currentAge = document.getElementById('user-age').value;
-
-            if(!email || !password) return alert("Remplis tout !");
+            if(!email || !password) return alert("Remplis les champs !");
 
             const { data, error } = (type === 'signUp') 
-                ? await clientSB.auth.signUp({ email, password, options: { data: { age: currentAge } } })
+                ? await clientSB.auth.signUp({ email, password })
                 : await clientSB.auth.signInWithPassword({ email, password });
 
-            if (error) alert("Erreur: " + error.message);
-            else {
-                document.getElementById('auth-overlay').style.display = 'none';
-                document.getElementById('user-display').innerText = email;
-            }
+            if (error) alert(error.message);
+            else document.getElementById('auth-overlay').style.display = 'none';
         }
 
         async function askAI() {
@@ -249,48 +226,36 @@
             const text = inputField.value.trim();
             if (!text) return;
 
-            if(firstMessage) {
-                addToHistory(text);
-                firstMessage = false;
+            if(firstMsg) {
+                const hist = document.getElementById('history');
+                hist.innerHTML = `<div class="history-item">💬 ${text}</div>` + hist.innerHTML;
+                firstMsg = false;
             }
 
             addMsg(text, 'user-msg');
             inputField.value = '';
 
-            try {
-                const res = await fetch("https://api.groq.com/openai/v1/chat/completions", {
-                    method: "POST",
-                    headers: { "Authorization": `Bearer ${GROQ_KEY}`, "Content-Type": "application/json" },
-                    body: JSON.stringify({
-                        "model": "llama-3.3-70b-versatile",
-                        "messages": [
-                            { "role": "system", "content": `Tu es Cogitron, robot pour enfant de ${currentAge} ans. Réponds de façon lisible et amicale.` },
-                            { "role": "user", "content": text }
-                        ]
-                    })
-                });
-                const data = await res.json();
-                addMsg(data.choices[0].message.content, 'bot-msg');
-            } catch(e) {
-                addMsg("Oups, j'ai eu un petit bug... Vérifie ta connexion !", 'bot-msg');
-            }
+            const res = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+                method: "POST",
+                headers: { "Authorization": `Bearer ${GROQ_KEY}`, "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    "model": "llama-3.3-70b-versatile",
+                    "messages": [{ "role": "system", "content": "Tu es Cogitron, une IA pour enfant. Réponds avec des paragraphes clairs, utilise des listes à puces si nécessaire et sois amical." }, { "role": "user", "content": text }]
+                })
+            });
+
+            const data = await res.json();
+            addMsg(data.choices[0].message.content, 'bot-msg');
         }
 
         function addMsg(text, type) {
             const win = document.getElementById('chat-window');
             const div = document.createElement('div');
             div.className = `message ${type}`;
-            div.innerText = text;
+            // On utilise "marked.parse" pour rendre le texte beau
+            div.innerHTML = marked.parse(text);
             win.appendChild(div);
             win.scrollTop = win.scrollHeight;
-        }
-
-        function addToHistory(title) {
-            const history = document.getElementById('history');
-            const item = document.createElement('div');
-            item.className = 'history-item';
-            item.innerText = "💬 " + title;
-            history.prepend(item);
         }
     </script>
 </body>
