--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             margin: 0;
             display: flex;
             height: 100vh;
+            overflow: hidden;
         }
 
         /* --- SIDEBAR --- */
@@ -33,36 +34,49 @@
             border-right: 1px solid #2d2d2d;
             display: flex;
             flex-direction: column;
-            padding: 15px;
+            padding: 20px;
             z-index: 10;
         }
 
-        .new-chat-btn {
-            border: 1px solid var(--neon-blue);
-            background: transparent;
+        .logo-neon {
+            font-family: 'Rajdhani', sans-serif;
             color: var(--neon-blue);
+            font-size: 1.8rem;
+            margin: 0 0 30px 0;
+            text-shadow: 0 0 10px var(--neon-blue);
+        }
+
+        .new-chat-btn {
+            border: 1px solid var(--neon-pink);
+            background: transparent;
+            color: var(--neon-pink);
             padding: 12px;
-            border-radius: 10px;
+            border-radius: 12px;
             cursor: pointer;
             font-weight: 600;
-            margin-bottom: 20px;
+            margin-bottom: 25px;
             transition: 0.3s;
         }
 
+        .new-chat-btn:hover { background: rgba(255, 0, 127, 0.1); box-shadow: 0 0 15px rgba(255, 0, 127, 0.2); }
+
+        .history-list { flex-grow: 1; overflow-y: auto; }
         .history-item {
-            padding: 10px;
-            margin-bottom: 5px;
+            padding: 12px;
+            margin-bottom: 8px;
             border-radius: 8px;
             cursor: pointer;
             font-size: 0.85rem;
             color: #888;
-            background: rgba(255,255,255,0.02);
+            background: rgba(255,255,255,0.03);
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            border-left: 2px solid transparent;
         }
+        .history-item:hover { color: white; border-left: 2px solid var(--neon-blue); background: rgba(0, 212, 255, 0.05); }
 
-        /* --- ZONE DE CHAT (AMÉLIORÉE) --- */
+        /* --- ZONE DE CHAT --- */
         .main-container {
             flex-grow: 1;
             display: flex;
@@ -74,33 +88,34 @@
         #chat-window {
             flex-grow: 1;
             overflow-y: auto;
-            padding: 20px 20%; /* Plus de marge sur les côtés pour centrer */
+            padding: 40px 20% 120px 20%;
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 25px;
             scroll-behavior: smooth;
         }
 
         .message {
-            max-width: 75%; /* Ne prend pas toute la ligne */
-            line-height: 1.6; /* Espace entre les lignes */
-            padding: 12px 18px;
-            border-radius: 18px;
-            font-size: 1rem;
+            max-width: 80%;
+            line-height: 1.7;
+            padding: 15px 22px;
+            border-radius: 20px;
+            font-size: 1.05rem;
             word-wrap: break-word;
-            animation: fadeIn 0.2s ease-out;
+            animation: slideUp 0.3s ease-out;
         }
 
-        /* Style spécifique pour le texte à l'intérieur (Markdown) */
-        .message p { margin: 8px 0; }
-        .message ul, .message ol { padding-left: 20px; }
+        @keyframes slideUp { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+
+        .message p { margin: 10px 0; }
+        .message ul, .message ol { padding-left: 25px; }
 
         .user-msg {
             align-self: flex-end;
             background: #2b2d3e;
             color: #fff;
             border-bottom-right-radius: 4px;
-            border-right: 3px solid var(--neon-pink);
+            border-right: 4px solid var(--neon-pink);
         }
 
         .bot-msg {
@@ -108,22 +123,27 @@
             background: #1e2235;
             color: #e0e0e0;
             border-bottom-left-radius: 4px;
-            border-left: 3px solid var(--neon-blue);
+            border-left: 4px solid var(--neon-blue);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
 
         /* --- INPUT --- */
         .input-area {
-            padding: 30px 20%;
-            background: linear-gradient(transparent, var(--chat-bg) 40%);
+            padding: 20px 20% 40px 20%;
+            background: linear-gradient(transparent, var(--chat-bg) 60%);
+            position: absolute;
+            bottom: 0;
+            width: 60%;
         }
 
         .input-wrapper {
             display: flex;
             background: #252839;
             border: 1px solid #3d405b;
-            border-radius: 15px;
-            padding: 5px 10px;
+            border-radius: 18px;
+            padding: 8px 15px;
             align-items: center;
+            box-shadow: 0 0 20px rgba(0,0,0,0.3);
         }
 
         #user-input {
@@ -132,21 +152,23 @@
             border: none;
             padding: 12px;
             color: white;
-            font-size: 1rem;
+            font-size: 1.1rem;
             outline: none;
         }
 
         .send-btn {
             background: var(--neon-blue);
             border: none;
-            width: 35px;
-            height: 35px;
-            border-radius: 10px;
+            width: 45px;
+            height: 45px;
+            border-radius: 12px;
             cursor: pointer;
-            font-size: 1.1rem;
+            font-size: 1.3rem;
+            transition: 0.2s;
         }
+        .send-btn:hover { transform: scale(1.1); filter: brightness(1.2); }
 
-        /* --- AUTH --- */
+        /* --- AUTH OVERLAY --- */
         #auth-overlay {
             position: fixed;
             inset: 0;
@@ -160,65 +182,103 @@
         .auth-card {
             background: #161925;
             padding: 40px;
-            border-radius: 20px;
+            border-radius: 25px;
             border: 1px solid var(--neon-blue);
             text-align: center;
-            width: 300px;
+            width: 320px;
+            box-shadow: 0 0 30px rgba(0, 212, 255, 0.15);
         }
 
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(5px); } to { opacity: 1; transform: translateY(0); } }
+        .auth-card input, .auth-card select {
+            width: 100%;
+            padding: 12px;
+            margin: 10px 0;
+            border-radius: 8px;
+            border: 1px solid #3d405b;
+            background: #0a0b10;
+            color: white;
+            box-sizing: border-box;
+        }
     </style>
 </head>
 <body>
 
     <div id="auth-overlay">
         <div class="auth-card">
-            <h1 style="font-family:'Rajdhani'; color:var(--neon-blue); margin-top:0;">COGITRON</h1>
-            <input type="email" id="email" placeholder="Email" style="width:90%; padding:10px; margin:10px 0; border-radius:5px; border:none; background:#252839; color:white;">
-            <input type="password" id="password" placeholder="Mot de passe" style="width:90%; padding:10px; margin:10px 0; border-radius:5px; border:none; background:#252839; color:white;">
-            <button onclick="handleAuth('signIn')" style="width:100%; padding:12px; background:var(--neon-blue); color:white; border:none; border-radius:8px; margin-top:10px; cursor:pointer; font-weight:bold;">ENTRER</button>
-            <p onclick="handleAuth('signUp')" style="font-size:0.7rem; color:#666; cursor:pointer; margin-top:15px;">Pas de compte ? S'inscrire</p>
+            <h1 class="logo-neon">COGITRON</h1>
+            <input type="email" id="email" placeholder="Email (Parents)">
+            <input type="password" id="password" placeholder="Mot de passe secret">
+            
+            <div style="text-align: left; margin: 10px 0; font-size: 0.9rem; color: #888;">
+                <label>Tu as quel âge ?</label>
+                <select id="user-age">
+                    <option value="6">6 ans</option>
+                    <option value="8" selected>8 ans</option>
+                    <option value="10">10 ans</option>
+                    <option value="12">12 ans</option>
+                </select>
+            </div>
+
+            <button onclick="handleAuth('signIn')" style="width:100%; padding:14px; background:var(--neon-blue); color:black; border:none; border-radius:10px; cursor:pointer; font-weight:bold; margin-top:10px;">SE CONNECTER</button>
+            <button onclick="handleAuth('signUp')" style="width:100%; padding:14px; background:transparent; color:var(--neon-pink); border:1px solid var(--neon-pink); border-radius:10px; cursor:pointer; font-weight:bold; margin-top:15px;">S'INSCRIRE</button>
         </div>
     </div>
 
     <div class="sidebar">
-        <h2 style="font-family:'Rajdhani'; color:var(--neon-pink); margin:0 0 20px 0;">COGITRON</h2>
+        <h1 class="logo-neon" style="font-size: 1.5rem;">COGITRON</h1>
         <button class="new-chat-btn" onclick="location.reload()">+ Nouveau Chat</button>
         <div class="history-list" id="history"></div>
+        <div style="font-size:0.7rem; color:#444; margin-top: 15px;">Session active: <br><span id="user-tag">---</span></div>
     </div>
 
     <div class="main-container">
         <div id="chat-window">
-            <div class="message bot-msg">Salut Louis ! Je suis Cogitron. On discute ? 🤖</div>
+            <div class="message bot-msg">Bienvenue Louis ! Je suis Cogitron, ton assistant robot. De quoi veux-tu discuter aujourd'hui ? 🤖</div>
         </div>
 
         <div class="input-area">
             <div class="input-wrapper">
-                <input type="text" id="user-input" placeholder="Pose ta question..." onkeypress="if(event.key==='Enter') askAI()">
+                <input type="text" id="user-input" placeholder="Pose ta question ici..." onkeypress="if(event.key==='Enter') askAI()">
                 <button class="send-btn" onclick="askAI()">🚀</button>
             </div>
         </div>
     </div>
 
     <script>
+        // CONFIGURATION
         const SB_URL = "https://mrzevhvpoltsobxtkpxe.supabase.co";
         const SB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1yemV2aHZwb2x0c29ieHRrcHhlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA5MTY2MDksImV4cCI6MjA4NjQ5MjYwOX0.4NOt_j0aP02Nh-E_7mJy32hE8Q0ag0gA32PXgxNpSvU";
         const GROQ_KEY = "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";
         
         const clientSB = supabase.createClient(SB_URL, SB_KEY);
-        let firstMsg = true;
+        let currentAge = 8;
+        let isFirstMessage = true;
 
         async function handleAuth(type) {
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
-            if(!email || !password) return alert("Remplis les champs !");
+            currentAge = document.getElementById('user-age').value;
+
+            if(!email || !password) return alert("Remplis bien tous les champs !");
 
             const { data, error } = (type === 'signUp') 
-                ? await clientSB.auth.signUp({ email, password })
+                ? await clientSB.auth.signUp({ 
+                    email, 
+                    password, 
+                    options: { data: { age: currentAge } } 
+                })
                 : await clientSB.auth.signInWithPassword({ email, password });
 
-            if (error) alert(error.message);
-            else document.getElementById('auth-overlay').style.display = 'none';
+            if (error) {
+                alert("Erreur : " + error.message);
+            } else {
+                if (type === 'signUp') {
+                    alert("Compte créé ! Tu peux maintenant te connecter.");
+                } else {
+                    document.getElementById('auth-overlay').style.display = 'none';
+                    document.getElementById('user-tag').innerText = email;
+                }
+            }
         }
 
         async function askAI() {
@@ -226,33 +286,46 @@
             const text = inputField.value.trim();
             if (!text) return;
 
-            if(firstMsg) {
+            // Ajout à la sidebar au premier message
+            if(isFirstMessage) {
                 const hist = document.getElementById('history');
-                hist.innerHTML = `<div class="history-item">💬 ${text}</div>` + hist.innerHTML;
-                firstMsg = false;
+                const title = text.length > 20 ? text.substring(0, 20) + "..." : text;
+                hist.innerHTML = `<div class="history-item">💬 ${title}</div>` + hist.innerHTML;
+                isFirstMessage = false;
             }
 
             addMsg(text, 'user-msg');
             inputField.value = '';
 
-            const res = await fetch("https://api.groq.com/openai/v1/chat/completions", {
-                method: "POST",
-                headers: { "Authorization": `Bearer ${GROQ_KEY}`, "Content-Type": "application/json" },
-                body: JSON.stringify({
-                    "model": "llama-3.3-70b-versatile",
-                    "messages": [{ "role": "system", "content": "Tu es Cogitron, une IA pour enfant. Réponds avec des paragraphes clairs, utilise des listes à puces si nécessaire et sois amical." }, { "role": "user", "content": text }]
-                })
-            });
+            try {
+                const res = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+                    method: "POST",
+                    headers: { 
+                        "Authorization": `Bearer ${GROQ_KEY}`, 
+                        "Content-Type": "application/json" 
+                    },
+                    body: JSON.stringify({
+                        "model": "llama-3.3-70b-versatile",
+                        "messages": [
+                            { "role": "system", "content": `Tu es Cogitron, une IA pour un enfant de ${currentAge} ans. Réponds avec des phrases claires, utilise des listes et des emojis. Sois très encourageant et instructif.` },
+                            { "role": "user", "content": text }
+                        ]
+                    })
+                });
 
-            const data = await res.json();
-            addMsg(data.choices[0].message.content, 'bot-msg');
+                const data = await res.json();
+                const aiReply = data.choices[0].message.content;
+                addMsg(aiReply, 'bot-msg');
+            } catch (err) {
+                addMsg("Mince, j'ai une petite erreur de connexion. Réessaie !", 'bot-msg');
+            }
         }
 
         function addMsg(text, type) {
             const win = document.getElementById('chat-window');
             const div = document.createElement('div');
             div.className = `message ${type}`;
-            // On utilise "marked.parse" pour rendre le texte beau
+            // Rendu Markdown pour les listes et le gras
             div.innerHTML = marked.parse(text);
             win.appendChild(div);
             win.scrollTop = win.scrollHeight;
