--- a/index.html
+++ b/index.html
@@ -214,8 +214,12 @@
                 <select id="user-age">
                     <option value="6">6 ans</option>
                     <option value="8" selected>8 ans</option>
+                     <option value="9">9 ans</option>
                     <option value="10">10 ans</option>
                     <option value="12">12 ans</option>
+                     <option value="13">13 ans</option>
+                     <option value="14">14 ans</option>
+                     <option value="15">15 ans</option>
                 </select>
             </div>
 
