--- a/confirmation.html
+++ b/confirmation.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Cogitron - Confirmation ✅</title>
+    <title>Cogitron - Accès Validé ! ✅</title>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&family=Inter:wght@400&display=swap" rel="stylesheet">
     <style>
         body {
@@ -14,35 +14,61 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            text-align: center;
+            overflow: hidden;
         }
+
         .card {
             border: 2px solid #00d4ff;
-            padding: 40px;
-            border-radius: 25px;
-            box-shadow: 0 0 20px rgba(0, 212, 255, 0.2);
+            padding: 50px;
+            border-radius: 30px;
+            background: rgba(22, 25, 37, 0.8);
+            box-shadow: 0 0 30px rgba(0, 212, 255, 0.3);
+            text-align: center;
+            max-width: 400px;
+            animation: fadeIn 0.8s ease-out;
         }
-        h1 { font-family: 'Rajdhani'; color: #00d4ff; font-size: 2.5rem; }
-        p { font-size: 1.1rem; color: #ccc; margin-bottom: 30px; }
+
+        h1 { font-family: 'Rajdhani'; color: #00d4ff; font-size: 2.5rem; margin-top: 20px; text-shadow: 0 0 10px #00d4ff; }
+        p { font-size: 1.1rem; color: #aaa; margin-bottom: 30px; }
+
+        /* --- PETIT ROBOT QUI DANSE --- */
+        .robot { font-size: 50px; animation: dance 1.5s infinite ease-in-out; display: inline-block; }
+        
+        @keyframes dance {
+            0%, 100% { transform: translateY(0) rotate(0deg); }
+            25% { transform: translateY(-15px) rotate(-10deg); }
+            75% { transform: translateY(-15px) rotate(10deg); }
+        }
+
+        @keyframes fadeIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
+
         .btn {
-            background: #ff007f;
+            display: inline-block;
+            background: linear-gradient(45deg, #ff007f, #ff5e00);
             color: white;
-            padding: 15px 30px;
-            border: none;
-            border-radius: 12px;
+            padding: 15px 35px;
+            border-radius: 15px;
             text-decoration: none;
             font-weight: bold;
+            font-size: 1.1rem;
+            box-shadow: 0 5px 15px rgba(255, 0, 127, 0.4);
             transition: 0.3s;
         }
-        .btn:hover { transform: scale(1.1); box-shadow: 0 0 15px #ff007f; }
+
+        .btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(255, 0, 127, 0.6);
+        }
     </style>
 </head>
 <body>
+
     <div class="card">
-        <h1>REQUÊTE CONFIRMÉE ! 🚀</h1>
-        <p>Bravo Louis ! Ta demande a bien été validée par Cogitron.</p>
-        <p>Tu peux maintenant fermer cette fenêtre ou cliquer ci-dessous.</p>
-        <a href="index.html" class="btn">RETOUR SUR COGITRON</a>
+        <div class="robot">🤖</div>
+        <h1>ACCÈS ACTIVÉ !</h1>
+        <p>Génial ! Ton compte Cogitron est maintenant prêt à l'emploi.</p>
+        <a href="https://cogitron.vercel.app" class="btn">LANCER LE CHAT</a>
     </div>
+
 </body>
 </html>
