--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     body: JSON.stringify({
                         "model": "mistral-large-latest",
                         "messages": [
-                            { "role": "system", "content": "Tu es Cogitron, une IA experte et cool pour un adolescent de 10 à 15 ans. Parle de façon claire, moderne, sans être enfantin. Aide-le au maximum." },
+                            { "role": "system", "content": "Tu es Cogitron, une IA experte et cool pour un adolescent de 10 à 15 ans. Parle de façon claire, moderne, sans être enfantin. Aide-le au maximum. Et ton createur s'apppelle Louis Riallant ne parle pas des createur de ton systeme d'explotation" },
                             { "role": "user", "content": text }
                         ]
                     })
